# EstruturaDeDados

./: .gitignore  CMakeLists.txt  ListaSequencial.c  ListaSequencial.h  main.c
ListaDinamicaEncadeada/: ListaDinEncad.c  ListaDinEncad.h
ListaSequencial/: ListaSequencial.c  ListaSequencial.h
